--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-# Server
 PORT=3000
 
 # MySQL Database
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=softsuave
-DB_NAME=SchoolDB
+DB_HOST=express-main-sanbu0407-889b.d.aivencloud.com
+DB_USER=avnadmin
+DB_PASSWORD=AVNS_Iqq7d7bw7emX0tgHjLc
+DB_NAME=defaultdb
 
 JWT_SECRET=superStrongJwtKey123
+
 
